--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">OpenCVTutorial2</string>
+    <string name="request_permission">This sample needs camera permission.</string>
 </resources>
